language_tests/source_files/invalid/closure_use_after_move.tr
// Test: Closure Capture Use After Move
// This file should fail to compile because a moved value is used again.

func consume_list(_ list: List[int32]) {
    // Consumes list by value.
}

func main() {
    var list = List[int32]()
    list.append(1)

    let consume = || { consume_list(list) } // moves list into closure

    // ERROR: use of moved value 'list'
    list.len()
    consume()
}
